# opencv_cap_video

./: CMakeLists.txt  config.txt
src/: main.cpp
src/include/: config.cpp  config.h  functions.cpp  functions.h  include.h
